formats/V4.7.0/lehd_public_use_schema.asciidoc
= LEHD Public Use Data Schema V4.7.0
<ces.qwi.feedback@census.gov>
21 August 2020
// a2x: --dblatex-opts "-P latex.output.revhistory=0 --param toc.section.depth=4"
:ext-relative: {outfilesuffix}
( link:lehd_public_use_schema.pdf[Printable version] )



[IMPORTANT]
.Important
==============================================
Feedback is welcome. Please write us at link:mailto:ces.qwi.feedback@census.gov?subject=LEHD_Schema[ces.qwi.feedback@census.gov].
==============================================
	

Purpose
-------
The public-use data from the Longitudinal Employer-Household Dynamics Program, including the Quarterly Workforce Indicators (QWI)
and Job-to-Job Flows (J2J), are available for download with the following data schema.
These data are available  through the LEHD website’s Data page at
https://lehd.ces.census.gov/data/ and through the LED Extraction Tool at https://ledextract.ces.census.gov/.

This document describes the data schema for LEHD files. LEHD-provided SHP files are separately described in link:lehd_shapefiles{ext-relative}[]. For each variable,
a set of allowable values is defined. Definitions are provided as CSV files,
with header variable definitions.  Changes relative to the original v4.0 version are listed <<changes,at the end>>.

File naming
-----------
The naming conventions of the data files is documented in link:lehd_csv_naming{ext-relative}[].

Extends
-------
This version reimplements some features from  V4.0. Many files compliant with LEHD or QWI Schema v4.0 will also be compliant with this schema, but compatibility is not guaranteed.

Supersedes
----------
This version supersedes V4.6.0, for files released as of R2020Q4.

Basic Schema
------------
Each data file is structured as a CSV file. The first columns contain <<identifiers>>, subsequent columns contain <<indicators>>, followed by <<statusflags,status flags>>. In some cases, visually formatted Excel (XLSX) files are also available,  containing the same information together with header lines  on each sheet.

=== Generic structure

[width="30%",format="csv",cols="<2",options="header"]
|===================================================
Column name
[ Identifier1 ]
[ Identifier2 ]
[ Identifier3 ]
[ ... ]
[ Indicator 1 ]
[ Indicator 2 ]
[ Indicator 3 ]
[ ... ]
[ Status Flag 1 ]
[ Status Flag 2 ]
[ Status Flag 3 ]
[ ... ]
|===================================================

Note: A full list of indicators for each type of file are shown below in the <<indicators,Indicators>> section.
While all indicators are included in the CSV files, only the requested indicators
will be included in data outputs from the LED Extraction Tool.

<<<

=== [[identifiers]]Identifiers
Records, unless otherwise noted, are parts of time-series data. Unique record identifiers are noted below, by file type.
Identifiers without the year and quarter component can be considered a series identifier.

==== Mapping for Identifiers
( link:lehd_mapping_identifiers.csv[] )

Each of the released files has a set of variables uniquely identifying records ('Identifiers'). The table below relates the set of identifier specifications
to the released files. The actual CSV files containing the identifiers for each set are listed after this table. Each identifier can take on a specified list of values, documented in the section on <<catvars,Categorical Variables>>.

[width="80%",format="csv",cols="<3,8*^1",options="header"]
|===================================================
include::lehd_mapping_identifiers.csv[]
|===================================================
<<<

==== Identifiers for qwi
( link:lehd_identifiers_qwi.csv[] )

[width="100%",format="csv",cols="2*^1,<3",options="header"]
|===================================================
include::lehd_identifiers_qwi.csv[]
|===================================================
<<<


==== Identifiers for j2j
( link:lehd_identifiers_j2j.csv[] )

[width="100%",format="csv",cols="2*^1,<3",options="header"]
|===================================================
include::lehd_identifiers_j2j.csv[]
|===================================================
<<<


==== Identifiers for j2jod
( link:lehd_identifiers_j2jod.csv[] )

[width="100%",format="csv",cols="2*^1,<3",options="header"]
|===================================================
include::lehd_identifiers_j2jod.csv[]
|===================================================
<<<


==== Identifiers for pseo
( link:lehd_identifiers_pseo.csv[] )

[width="100%",format="csv",cols="2*^1,<3",options="header"]
|===================================================
include::lehd_identifiers_pseo.csv[]
|===================================================
<<<



<<<
=== [[indicators]]Indicators
The following tables and associated mapping files
list the indicators available on each file.  The descriptor files themselves are structured as follows:

- The ''Indicator Variable'' is the short name of the variable on the CSV files, suitable for machine processing in a wide variety of statistical applications.
- When given, the ''Alternate name'' may appear in related documentation and articles.
- The ''Status Flag'' is used to indicate publication or data quality status (see <<statusflags,Status Flags>>).
- The ''Indicator Name'' is a non-abbreviated version of the ''Indicator Variable''.
- The ''Description'' provides more verbose description of the variable.
- ''Units'' identify the type of variable according to a very simplified taxonomoy (not formalized yet): counts, rates, monetary amounts.
- ''Concept'' classifies the variables into higher-level concepts. The taxonomy for these concepts has not been finalized yet, see link:label_concept_draft.csv[label_concept_draft.csv] for a draft version.
- The ''Base'' indicates the denominator used to compute the statistic, and may be '1'.

==== National QWI and state-level QWI ====

( link:variables_qwi.csv[variables_qwi.csv] )
[width="95%",format="csv",cols="3*^2,<5,<5,<2,<2,^2",options="header"]
|===================================================
include::variables_qwi.csv[]
|===================================================
<<<

==== National QWI and state-level QWI rates ====
Rates are computed from published data, and are provided as a convenience.


( link:variables_qwir.csv[variables_qwir.csv] )
[width="95%",format="csv",cols="3*^2,<5,<5,<2,<2,<2",options="header"]
|===================================================
include::variables_qwir.csv[]
|===================================================


<<<

==== Job-to-job flow counts (J2J)
( link:variables_j2j.csv[] )
[width="95%",format="csv",cols="3*^2,<5,<5,<2,<2,^1",options="header"]
|===================================================
include::variables_j2j.csv[]
|===================================================
<<<

==== Job-to-job flow rates (J2JR)
( link:variables_j2jr.csv[] )

Rates are computed from published data, and are provided as a convenience.


[width="95%",format="csv",cols="3*^2,<5,<5,<2,<2,^1",options="header"]
|===================================================
include::variables_j2jr.csv[]
|===================================================


<<<

==== Job-to-job flow Origin-Destination (J2JOD)
( link:variables_j2jod.csv[] )
[width="95%",format="csv",cols="3*^2,<5,<5,<2,<2,^1",options="header"]
|===================================================
include::variables_j2jod.csv[]
|===================================================
<<<


==== Post-Secondary Employment Outcomes Earnings (PSEOE)
( link:variables_pseoe.csv[] )
[width="95%",format="csv",cols="<1,<3,<5,2*<1",options="header"]
|===================================================
include::/home/jody/workspace/data/lehd-schema/formats/V4.7.0/tmp.dIPG1ereeq[]
|===================================================
<<<


==== Post-Secondary Employment Outcomes Flows(PSEOF)
( link:variables_pseof.csv[] )
[width="95%",format="csv",cols="<1,<3,<5,2*<1",options="header"]
|===================================================
include::/home/jody/workspace/data/lehd-schema/formats/V4.7.0/tmp.w7K8wJQ77J[]
|===================================================
<<<


<<<
=== [[vmeasures]]Variability measures
The following tables and associated mapping files
list the variability measures available on each file.  The ''Variability Measure'' is the short name of the variable on the CSV files,
suitable for machine processing in a wide variety of statistical applications. When given, the ''Alternate Name'' may appear in related documentation and articles.
The ''Variable Name'' is a more verbose description of the variability measure.

Six variability measures are published:

* Total variability, prefixed by vt_
* Standard error, prefixed by st_, and computed as the square root of Total Variability
* Between-implicate variability, prefixed by vb_
* Average within-implicate variability, prefixed by vw_
* Degrees of freedom, prefixed by df_
* Missingness ratio, prefixed by mr_

A missing variability measure indicates a structural zero in the corresponding indicator. This is currently not associated with a flag.

//Not all indicators have associated variability measures. For more details, see the following document TBD.

==== Generic structure

[width="30%",format="csv",cols="<2",options="header"]
|===================================================
Column name
[ Identifier1 ]
[ Identifier2 ]
[ Identifier3 ]
[ ... ]
[ Standard error for Indicator 1 ]
[ Standard error for Indicator 2 ]
[ Standard error for Indicator 3 ]
[ ... ]
[ Total variation for Indicator 1 ]
[ Total variation for Indicator 2 ]
[ Total variation for Indicator 3 ]
[ ... ]
[ Between-implicate variability for Indicator 1 ]
[ Between-implicate variability for Indicator 2 ]
[ Between-implicate variability for Indicator 3 ]
[ ... ]
[ Average within-implicate variability for Indicator 1 ]
[ Average within-implicate variability for Indicator 2 ]
[ Average within-implicate variability for Indicator 3 ]
[ ... ]
[ Degrees of freedom for Indicator 1 ]
[ Degrees of freedom for Indicator 2 ]
[ Degrees of freedom for Indicator 3 ]
[ ... ]
[ Missingness ratio for Indicator 1 ]
[ Missingness ratio for Indicator 2 ]
[ Missingness ratio for Indicator 3 ]
[ ... ]
|===================================================


Note: A full list of indicators for each type of file are shown  in the <<indicators,Indicators>> section. In the tables below, only a sample
of variability measures are printed, but the complete list is available in the linked CSV schema files.

<<<

==== National QWI and state-level QWI ====

( link:variables_qwiv.csv[variables_qwiv.csv] )
[width="95%",format="csv",cols="2*^2,<5,<5,<2",options="header"]
|===================================================
include::tmp_variables_qwiv.csv[]
|===================================================

<<<
==== National QWI and state-level QWI rates ====

( link:variables_qwirv.csv[variables_qwirv.csv] )
[width="95%",format="csv",cols="2*^2,<5,<5,<2",options="header"]
|===================================================
include::tmp_variables_qwirv.csv[]
|===================================================


<<<

==== Job-to-job flow counts (J2J)
Soon.
//( link:variables_j2j.csv[] )
//[width="95%",format="csv",cols="3*^2,<5",options="header"]
//|===================================================
//include::tmp_variables_j2jv.csv[]
//|===================================================
//<<<
//

==== Job-to-job flow rates (J2JR)
Soon.
//( link:variables_j2jr.csv[] )
//[width="95%",format="csv",cols="3*^2,<5",options="header"]
//|===================================================
//include::tmp_variables_j2jrv.csv[]
//|===================================================
//<<<

==== Job-to-job flow Origin-Destination (J2JOD)
Soon.
//( link:variables_j2jod.csv[] )
//[width="95%",format="csv",cols="^3,^2,^3,<5",options="header"]
//|===================================================
//include::tmp_variables_j2jodv.csv[]
//|===================================================

<<<



== [[catvars]]Categorical Variables
Categorical variable descriptions are displayed above each table, with the variable name shown in parentheses. Unless otherwise stated, every possible value/label combination for each categorical variable is listed. Please note that not all values will be available in every table.


=== agegrp
( link:label_agegrp.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_agegrp.csv[]
|===================================================

=== education
( link:label_education.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_education.csv[]
|===================================================

=== ethnicity
( link:label_ethnicity.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_ethnicity.csv[]
|===================================================

=== firmage
( link:label_firmage.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_firmage.csv[]
|===================================================

=== firmsize
( link:label_firmsize.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_firmsize.csv[]
|===================================================

=== ownercode
( link:label_ownercode.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_ownercode.csv[]
|===================================================

=== periodicity
( link:label_periodicity.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_periodicity.csv[]
|===================================================

=== quarter
( link:label_quarter.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_quarter.csv[]
|===================================================

=== race
( link:label_race.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_race.csv[]
|===================================================

=== seasonadj
( link:label_seasonadj.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_seasonadj.csv[]
|===================================================

=== sex
( link:label_sex.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_sex.csv[]
|===================================================

<<<
=== Industry ===

 
[[ind_level]]
==== Industry levels
( link:label_ind_level.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_ind_level.csv[]
|===================================================


==== Industry
( link:label_industry.csv[] )

Only a small subset of available values shown.
The 2017 NAICS (North American Industry Classification System) is used for all years.
QWI releases prior to R2018Q1 used the 2012 NAICS classification (see link:../V4.1.3[Schema v4.1.3]).
For a full listing of all valid 2017 NAICS codes, see https://www.census.gov/cgi-bin/sssd/naics/naicsrch?chart=2017.

[width="90%",format="csv",cols="^1,<5,^1",options="header"]
|===================================================
include::tmp2.csv[]
|===================================================
<<<


=== Educational Institution ===

==== Institution Levels
( link:label_inst_level.csv[] )

Educational institutions are tabulated individually in the current data release.
Future releases may aggregate to institutions to higher levels, such as state or Census Division.

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_inst_level.csv[]
|===================================================


==== Institution
( link:label_institution.csv[] )

Institution identifiers are sourced from the
https://www2.ed.gov/offices/OSFAP/PEPS/dataextracts.html[U.S. Department of Education, Federal Student Aid office].
This list has been supplemented with records for regional groupings of institutions (may be used in future PSEO tabulations).

[width="80%",format="csv",cols="^1,<4,^2,3*^1",options="header"]
|===================================================
include::label_institution.csv[lines=1]
...,,,,,
include::label_institution.csv[lines=2630;32017;17398;11819;23062;19324]
...,,,,,
|===================================================


=== Degree level
( link:label_degree_level.csv[] )

The degree levels are sourced from the
https://surveys.nces.ed.gov/ipeds/VisInstructions.aspx?survey=10&id=30080&show=part#chunk_1526[National Center for Education Statistics (NCES), Integrated Postsecondary Education Data System (IPEDS)].

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_degree_level.csv[]
|===================================================


=== Classification of Instruction Programs (CIP)

==== CIP levels
( link:label_cip_level.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_cip_level.csv[]
|===================================================


==== CIP Codes
( link:label_cipcode.csv[] )

CIP codes are sourced from the https://nces.ed.gov/ipeds/cipcode/[National Center for Education Statistics (NCES), Integrated Postsecondary Education Data System (IPEDS)].
Data are reported using 2020 CIP codes, for all years.

[width="90%",format="csv",cols="^1,<2,^1,^1,<6",options="header"]
|===================================================
include::label_cipcode.csv[lines=1;2;3;4;5;117;118]
|===================================================


=== Grad Cohort

`grad_cohort` is a 4-digit number representing the first year of the graduation cohort. The number of years in the cohort is reported in the separate <<#_grad_cohort_years>> variable.

====
If `grad_cohort`=2010 and `grad_cohort_years`=3, then the cell includes graduates from 2010, 2011, and 2012.
====

When tabulating across all cohorts, the value *0000* will be used for grad_cohort.

=== Grad Cohort Years

`grad_cohort_years` is the number of years in the cohort of reference (see <<#_grad_cohort>>). It varies by <<#_degree_level>>. Bachelor's degrees (05) are reported in 3 year cohorts, all other degrees are reported in 5 year cohorts. The `grad_cohort_years` will take a value (3,5). As tabulations are not done across degree types, the appropriate value will be reported in `grad_cohort_years` when `grad_cohort`=0000.

=== [[geography]]Geography ===

  
[[geo_level]]
==== [[geolevel]] Geographic levels
Geography labels for data files are provided in separate files, by scope. Each file 'label_geograpy_SCOPE.csv' may contain one or more types of records as flagged by <<geolevel,geo_level>>. For convenience, a composite file containing all geocodes is available as link:label_geography.csv[].
The 2019 vintage of https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-line-file.html[Census TIGER/Line geography] is used for all tabulations as of the R2020Q1 release.


Shapefiles are described in a link:lehd_shapefiles{ext-relative}[separate document].


( link:label_geo_level.csv[] )

[width="90%",format="csv",cols="^1,<3,<8",options="header"]
|===================================================
include::/home/jody/workspace/data/lehd-schema/formats/V4.7.0/tmp.0B81Mxb478[]
|===================================================



==== [[geostate]]National and state-level values ====
( link:label_fipsnum.csv[] )

The file link:label_fipsnum.csv[label_fipsnum.csv] contains values and labels
for all entities of <<geolevel,geo_level>> 'N' or 'S', and is a summary of separately available files.
[width="40%",format="csv",cols="^1,<3,^1",options="header"]
|===================================================
include::tmp.csv[]
|===================================================

( link:label_geography_division.csv[] )

The file link:label_geography_division.csv[label_geography_division.csv] contains values and labels
for all entities of <<geolevel,geo_level>> 'D'. For more information on which states comprise each division, see the map https://www2.census.gov/geo/pdfs/maps-data/maps/reference/us_regdiv.pdf[here].

[width="40%",format="csv",cols="^1,<3,^1",options="header"]
|===================================================
include::label_geography_division.csv[]
|===================================================

==== [[stusps]]State postal codes

Some parts of the schema use (lower or upper-case) state postal codes.

( link:label_stusps.csv[] )

[width="40%",format="csv",cols="^1,<2",options="header"]
|===================================================
include::/home/jody/workspace/data/lehd-schema/formats/V4.7.0/tmp.TvwJ8EKf7V[]
|===================================================


==== [[geosubstate]]Detailed state and substate level values

Files of type 'label_geography_[ST].csv' will contain identifiers and labels for geographic areas entirely comprised within a given state '[ST]'. State-specific parts of cross-state CBSA, in records of type <<geolevel,geo_level>> = M, are present on files of type 'label_geography_[ST].csv'. The file link:label_geography_metro.csv[] contains labels for records of type <<geolevel,geo_level>> = B, for metropolitan areas only.





[format="csv",width="50%",cols="^1,^2,^3",options="header"]
|===================================================
Scope,Types,Format file
US,N,link:label_geography_us.csv[]
DIVISION,D,link:label_geography_division.csv[]
METRO,B,link:label_geography_metro.csv[]
*States*,,
AK,S C W M,link:label_geography_ak.csv[]
AL,S C W M,link:label_geography_al.csv[]
AR,S C W M,link:label_geography_ar.csv[]
AZ,S C W M,link:label_geography_az.csv[]
CA,S C W M,link:label_geography_ca.csv[]
CO,S C W M,link:label_geography_co.csv[]
CT,S C W M,link:label_geography_ct.csv[]
DC,S C W M,link:label_geography_dc.csv[]
DE,S C W M,link:label_geography_de.csv[]
FL,S C W M,link:label_geography_fl.csv[]
GA,S C W M,link:label_geography_ga.csv[]
HI,S C W M,link:label_geography_hi.csv[]
IA,S C W M,link:label_geography_ia.csv[]
ID,S C W M,link:label_geography_id.csv[]
IL,S C W M,link:label_geography_il.csv[]
IN,S C W M,link:label_geography_in.csv[]
KS,S C W M,link:label_geography_ks.csv[]
KY,S C W M,link:label_geography_ky.csv[]
LA,S C W M,link:label_geography_la.csv[]
MA,S C W M,link:label_geography_ma.csv[]
MD,S C W M,link:label_geography_md.csv[]
ME,S C W M,link:label_geography_me.csv[]
MI,S C W M,link:label_geography_mi.csv[]
MN,S C W M,link:label_geography_mn.csv[]
MO,S C W M,link:label_geography_mo.csv[]
MS,S C W M,link:label_geography_ms.csv[]
MT,S C W M,link:label_geography_mt.csv[]
NC,S C W M,link:label_geography_nc.csv[]
ND,S C W M,link:label_geography_nd.csv[]
NE,S C W M,link:label_geography_ne.csv[]
NH,S C W M,link:label_geography_nh.csv[]
NJ,S C W M,link:label_geography_nj.csv[]
NM,S C W M,link:label_geography_nm.csv[]
NV,S C W M,link:label_geography_nv.csv[]
NY,S C W M,link:label_geography_ny.csv[]
OH,S C W M,link:label_geography_oh.csv[]
OK,S C W M,link:label_geography_ok.csv[]
OR,S C W M,link:label_geography_or.csv[]
PA,S C W M,link:label_geography_pa.csv[]
PR,S C W M,link:label_geography_pr.csv[]
RI,S C W M,link:label_geography_ri.csv[]
SC,S C W M,link:label_geography_sc.csv[]
SD,S C W M,link:label_geography_sd.csv[]
TN,S C W M,link:label_geography_tn.csv[]
TX,S C W M,link:label_geography_tx.csv[]
UT,S C W M,link:label_geography_ut.csv[]
VA,S C W M,link:label_geography_va.csv[]
VT,S C W M,link:label_geography_vt.csv[]
WA,S C W M,link:label_geography_wa.csv[]
WI,S C W M,link:label_geography_wi.csv[]
WV,S C W M,link:label_geography_wv.csv[]
WY,S C W M,link:label_geography_wy.csv[]
|===================================================

<<<
=== Aggregation level

==== J2J
( link:label_agg_level.csv[] )

Measures within the J2J and QWI data products are tabulated on many different dimensions, including demographic characteristics, geography, industry, and other firm characteristics. For Origin-Destination (O-D) tables, characteristics of the origin and destination firm can be tabulated separately.  Every tabulation level is assigned a unique aggregation index, represented by the agg_level variable. This index starts from 1, representing a national level grand total (all industries, workers, etc.), and progresses through different combinations of characteristics. There are gaps in the progression to leave space for aggregation levels that may be included in future data releases.

The following variables are included in the link:label_agg_level.csv[label_agg_level.csv]   file:

[width="60%",format="csv",cols="<2,<5",options="header"]
|===================================================
include::variables_agg_level.csv[]
|===================================================


The characteristics available on an aggregation level are repeated using a series of flags following the standard schema:

- <<_cip_levels,cip_level>> - degree field reporting level of table
- <<_institution_levels,inst_level>> - institution reporting level of table
- <<geolevel,geo_level>> - geographic level of table
- <<ind_level,ind_level>> - industry level of table
- by_ variables - flags indicating other dimensions reported, including ownership, demographics, firm age and size.

A shortened representation of the file is provided below, the complete file is available in the link above.


[width="90%",format="csv",cols=">1,3*<2,5*<1",options="header"]
|===================================================
include::/home/jody/workspace/data/lehd-schema/formats/V4.7.0/tmp.2aWApplwV3[]
|===================================================


==== PSEO
( link:label_agg_level_pseo.csv[] )

Measures within the PSEO data product can be tabulated by characteristics of the graduate
(e.g., institution attended, instructional program, degree level, etc.) and by characteristics of employment
(state, industry). All measures may not be available on all levels of aggregation - for example,
earnings variables may not be available when tabulating by place and industry of work, though counts are.
Every tabulation level is assigned a unique aggregation index, represented by the agg_level_pseo variable.
This index starts from 1, representing a national level grand total (all institutions, graduates, industries,
etc.), and progresses through different combinations of characteristics. There are gaps in the progression to
leave space for aggregation levels that may be included in future data releases. Aggregation levels that are
available in the PSEO release will be flagged.

The following variables are included in the link:label_agg_level_pseo.csv[] file:

[width="60%",format="csv",cols="<2,<5",options="header"]
|===================================================
Variable,Description
agg_level_pseo, index representing level of aggregation reported on a given record
grad_char,Characteristics of graduate and program
firm_char,Characterstics of place of employment
pseoe,Flag: aggregation level available on PSEO Earnings
pseof,Flag: aggregation level available on PSEO Flows
|===================================================

The characteristics available on an aggregation level are repeated using a series of flags following the standard schema:

- <<#_institution_levels,inst_levels>> - institution level of table
- <<geolevel,geo_level>> - geographic level of table
- <<ind_level,ind_level>> - industry level of table
- by_ variables - flags indicating other dimensions reported, including ownership, demographics, firm age and size.


[width="90%",format="csv",cols="^1,2*<3,8*^1",options="header"]
|===================================================
include::/home/jody/workspace/data/lehd-schema/formats/V4.7.0/tmp.KHlfzzUE6K[]
|===================================================

===== Restricted 4-digit CIP tabulations in earnings data (PSEOE)

Earnings estimates and counts are provided only at the 2-digit CIP level for Masters and Doctor Research programs (degree levels 07 and 17). Records are included for 4-digit programs observed, but all measures are suppressed.


==== QWI

Aggregation level to be added to QWI in a future release


<<<
== [[statusflags]]Status Flags
( link:label_flags.csv[] )

Most indicators in the LEHD data products have associated status flags. Each status flag in the tables above contains one of the following valid values. The values and their interpretation are listed in the tables below. Unless otherwise specified in this section, a status flag will take the values described in 7.1 Standard Status Flags.

=== Standard Status Flags

[IMPORTANT]
.Important
==============================================
Note: Currently, the J2J and PSEO tables only contain status flags '-1', '1', '5'. Status flags with values 10 or above only appear in online applications, not in CSV files.
==============================================


[width="80%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_flags.csv[]
|===================================================

=== IPEDS Count Status Flag
( link:label_flags_ipeds_count.csv[] )

Graduate counts are provided from public use data from the https://nces.ed.gov/ipeds/use-the-data[Integrated Postsecondary Education Data System (IPEDS)]. Counts are linked to graduation cohorts in the PSEO data and included in the PSEOE tables. In a small number of cases, misalignment in programs (CIPCODE) is observed between the IPEDS and PSEO counts. In these cases, the IPEDS counts adjusted to be consistent with those on PSEO, and the count is flagged accordingly.

[width="80%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::label_flags_ipeds_count.csv[]
|===================================================




<<<

== [[metadata]]Metadata
( link:variables_version.csv[] )

=== [[metadataqwij2j]]Version Metadata for QWI, J2J, and PSEO Files (version.txt)

Each data release is accompanied by one or more files with metadata on geographic and temporal coverage, in a compact notation. These files follow the following naming convention:
--------------------------------
version_[type].txt
--------------------------------
where each component is described in more detail in link:lehd_csv_naming{ext-relative}[].

The contents contains the following elements:
[width="90%",format="csv",cols="<1,<3,<4",options="header"]
|===================================================
include::tmp_variables_version.csv[]
|===================================================

For instance, the metadata for the latest_release QWI release of
Delaware
(obtained from https://lehd.ces.census.gov/data/qwi/latest_release/de/version_qwi.txt[here]) has the following content:
--------------------------------


QWI_F DE 10 1998:3-2019:4 V4.6.0 R2020Q3 qwipu_de_20200717_2142
QWI_FA DE 10 1998:3-2018:4 V4.6.0 R2020Q3 qwipu_de_20200717_2142
QWI_FS DE 10 1998:3-2018:4 V4.6.0 R2020Q3 qwipu_de_20200717_2142
--------------------------------
Similarly, the metadata for the latest_release release of
Delaware J2J
tabulations (obtained from https://lehd.ces.census.gov/data/j2j/latest_release/de/j2j/version_j2j.txt[here]) has  the following content:
--------------------------------
J2J DE 10 2000:2-2019:2 V4.6.0 R2020Q2 j2jpu_de_20200620_0943
--------------------------------
Some J2J metadata may contain multiple lines, as necessary.

The PSEO metadata will contain separate lines for the PSEOE and PSEOF tables. The year range for PSEO tables is based on the <<#_grad_cohort>>, the start year of the graduation cohort. An example for Colorado institutions has the following content:

--------------------------------
PSEOE CO 08 2001-2015 V4.5.0 2019Q1 pseopu_co_20190617_0839
PSEOF CO 08 2001-2015 V4.5.0 2019Q1 pseopu_co_20190617_0839
--------------------------------

=== [[metadataj2jod]]Additional Metadata for J2JOD Files (avail.csv)
(link:variables_avail.csv[])

Because the origin-destination (J2JOD) data link two regions, we provide an auxiliary file with the time range that cells containing data for each geographic pairing may appear in a data release.
[width="80%",format="csv",cols="<2,<2,<4",options="header"]
|===================================================
include::variables_avail.csv[]
|===================================================
The reference region will always be either the origin or the destination. National tabulations contain records where both origin and destination are <<geolevel,geo_level>>=N; state tabulations contain records where <<geolevel,geo_level>> in (N,S); metro tabulations contain records where <<geolevel,geo_level>> in (N,S,B). Data may be suppressed for certain combinations of regions and quarters because the estimates do not meet Census Bureau publication standards.



=== [[metadatalags]]Metadata on Indicator Availability
(link:variables_lags.csv[])

Each <<indicators,Indicator>> potentially requires leads and/or lags of data to be computed, and thus may not be available for certain time periods. Only two QWI will be available for all quarters of the time span described by +start+ and +end+ in the <<metadataqwij2j,version.txt>> files:  +EmpTotal+ and +Payroll+.  The date range for QWI, QWIR, J2J, and J2JR can be found in <<metadataqwij2j,version.txt>>; the date range for J2JOD can be found in <<metadataj2jod,avail.csv>>.

For each indicator, the following files contain the quarters of data required to be available relative to the overall date range described in the metadata for the release:

* link:lags_qwi.csv[]
* link:lags_j2j.csv[]

The files are structured as follows:
[width="80%",format="csv",cols="<2,<2,<4",options="header"]
|===================================================
include::variables_lags.csv[]
|===================================================
<<<


== [[changes]] Changes
For a description of how schema files are versioned, see link:../VERSIONING{ext-relative}[main directory].

=== Changes from 4.6.0
- Merge PSEO schema files into official release version
- Minor formatting changes

=== Changes from 4.5.0-draft
- Additional status flags on PSEO Earnings
- Additional measures on PSEO Flows to report unobserved/marginally employed
- Earnings reported at 2-digit CIPCODE level
- Institution code changed to 8-digits
- Updated to 2020 CIPCODE

<<<
*******************
Released: 2020-08-21
*******************

